--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: #006080 url("../images/sw-fighter-bg.jpg") center/cover;
+    background: #bcaf8d url("../images/sw-fighter-bg.jpg") center/cover;
     color: white;
     display: flex;
         flex-direction: column;
@@ -17,17 +17,16 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Orbitron', sans-serif;
-    font-weight: bolder;
+    font-weight: 900;
     line-height: 1em;
-    margin: 1em auto;
     width: 100%;
 }
     
     h1 { font-size: 2.5em; }
-    h2 { font-size: 2em; margin-top: 0; }
-    h3 {font-size: 1.5em; }
+    h2 { color: #222; font-size: 2em; }
+    h3 { font-size: 1em; font-weight: 400; margin-bottom: 1rem; }
 
-p { margin: 1em auto;}
+h1, p { margin: 1em auto;}
 
 header h1, 
 article, 
@@ -54,7 +53,8 @@ header {
 }
 
 article {
-
+    margin: 1em auto;
+    padding: 0;
 }
 
 footer {
@@ -64,15 +64,36 @@ footer {
 }
 
 .panel {
-    background: rgba(255, 255, 255, 0.2);
-    display: flex;
-        align-content: flex-start;
-        flex-flow: row;
+    background: rgba(255, 255, 255, 0.4);
     margin: 2em auto;
     padding: 1em;
 }
+.panel-content {
+    display: flex;
+        align-content: flex-start;
+        flex-flow: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+}
 
-.characters {
+.character {
+    background: rgba(0,0,0,0.6);
+    flex-grow: 1;
+    margin: 0 0.5em;
+    margin-top: 1em;
     padding: 1em;
-    width: 20%;
+    text-align: center;
+    width: 23%;
+        min-width: 200px;
+}
+    .character h3 { margin-top: 0; }
+    .character p { margin: 0; }
+    .character img { width: 100%; }
+
+
+
+@media (max-width: 1000px) {
+    .character {
+        width: 45%;
+    }
 }
