--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ footer {
     .character p { margin: 0; }
     .character img { width: 100%; }
 
-
+.hide { display: none; }
 
 @media (max-width: 1000px) {
     .character {
