--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,18 +15,19 @@ body {
     overflow: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, button {
     font-family: 'Orbitron', sans-serif;
     font-weight: 900;
     line-height: 1em;
-    width: 100%;
 }
     
     h1 { font-size: 2.5em; }
     h2 { color: #222; font-size: 2em; }
-    h3 { font-size: 1em; font-weight: 400; margin-bottom: 1rem; }
+    h3 { margin-bottom: 1rem; }
 
 h1, p { margin: 1em auto;}
+
+h3, button { font-weight: 400; letter-spacing: 2px;}
 
 header h1, 
 article, 
@@ -62,35 +63,57 @@ footer {
     margin-top: auto;
     text-align: center;
 }
+/* Hiding content */
+    .hide { display: none; }
 
-.panel {
-    background: rgba(255, 255, 255, 0.4);
-    margin: 2em auto;
-    padding: 1em;
-}
-.panel-content {
-    display: flex;
-        align-content: flex-start;
-        flex-flow: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
+/* Panel stuff */
+    .panel {
+        background: rgba(255, 255, 255, 0.4);
+        margin: 2em auto;
+        padding: 1em;
+    }
+        .panel-content {
+            display: flex;
+                align-content: flex-start;
+                flex-flow: row;
+                flex-wrap: wrap;
+                justify-content: space-between;
+        }
 
-.character {
-    background: rgba(0,0,0,0.6);
-    flex-grow: 1;
-    margin: 0 0.5em;
-    margin-top: 1em;
-    padding: 1em;
-    text-align: center;
-    width: 23%;
-        min-width: 200px;
-}
-    .character h3 { margin-top: 0; }
-    .character p { margin: 0; }
-    .character img { width: 100%; }
+    /* Character stuff */
+        .character {
+            background: rgba(0,0,0,0.6);
+            flex-grow: 1;
+            margin: 0 0.5em;
+            margin-top: 1em;
+            padding: 1em;
+            text-align: center;
+            width: 23%;
+                min-width: 200px;
+        }
+            .character:hover { background: rgba(0,0,0,0.8)}
+            .character h3 { margin-top: 0; }
+            .character p { margin: 0; }
+            .character img { width: 100%; }
 
-.hide { display: none; }
+/* Battle Content */
+    #battle .panel-content {
+        align-items: center;
+    }
+        #battle .character {
+            flex-grow: 0;
+            width: 33%;
+        }
+    button {
+        background: rgba(0, 0, 0, 0.6);
+        border: none;
+        color: white;
+        font-weight: normal;
+        padding: 1em;
+    }
+        button:hover {
+            background: rgba(0, 0, 0, 0.8);
+        }
 
 @media (max-width: 1000px) {
     .character {
