--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,11 +21,9 @@ h1, h2, h3, h4, h5, h6, button {
     line-height: 1em;
 }
     
-    h1 { font-size: 2.5em; }
+    h1 { font-size: 2.5em; margin: 1em auto; }
     h2 { color: #222; font-size: 2em; }
     h3 { margin-bottom: 1rem; }
-
-h1, p { margin: 1em auto;}
 
 h3, button { font-weight: 400; letter-spacing: 2px;}
 
@@ -113,6 +111,19 @@ footer {
     }
         button:hover {
             background: rgba(0, 0, 0, 0.8);
+        }
+
+/* Log content */
+    #log .panel-content { 
+        display: block; 
+        height: 14em;
+        overflow-y: auto;
+    }
+        #log .combat {
+            background: rgba(255, 255, 255, 0.5);
+            color: black;
+            margin-top: 1em;
+            padding: 0.25em 1em;
         }
 
 @media (max-width: 1000px) {
